fixed comment overflow bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -481,6 +481,8 @@ header {
   width: 55%;
   text-align: center;
   font-size: 20px;
+  overflow-x: hidden;
+
 }
 
 .commentSection h1 {
